@@ -80,6 +80,21 @@
         </long>
       </locale>
     </schema>
+    <schema>
+      <key>/schemas/apps/update-manager/show_versions</key>
+      <applyto>/apps/update-manager/show_versions</applyto>
+      <owner>update-manager</owner>
+      <type>bool</type>
+      <default>False</default>
+		
+      <locale name="C">
+        <short>Show version in update list</short>
+        <long>
+	  If this key is set the main update list window will
+	  show version information (from version to version).
+        </long>
+      </locale>
+    </schema>
   </schemalist>
 </gconfschemafile>
 
