@@ -18,6 +18,9 @@ update-manager (1:0.93.18) intrepid; urgency=low
   * DistUpgrade/DistUpgradeViewGtk.py:
     - fix typo and unfuzzy translations. Thanks to Brian Murray
       for the patch, LP: #272726)
+  * UpdateManager/UpdateManager.py:
+    - add gconf key /apps/update-manager/show_versions to show
+      version information (disabled by default, LP: #189406)
   
  --
 
